try fixing center align

--- a/style.css
+++ b/style.css
@@ -71,10 +71,12 @@ body {
     }
 }
 
-
 .profile-card-wrapper {
     position: relative;
     z-index: 2;
+
+    box-shadow: 0px 5px 10px 0px #2d3248;
+    border-radius: 1rem;
 }
 
 .profile-card-content {
@@ -156,7 +158,7 @@ body {
 
 .profile-card-social {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
 
     padding: 1.5rem;
